src/app/components/navbar/navbar.component.scss
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem;
  
  font-size: 2rem;
  color: white;

  background-color: rgba($color: #000000, $alpha: 0.2);

  &__links {
    display: none;
  }

  &__hamburger {
    width:  4rem;
    height: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  &__hamburger-stick {
    height: 0.4rem;
    background-color: white;
  }
}

